--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
 //    compile 'com.google.zxing:core:3.2.0'
     compile 'com.journeyapps:zxing-android-embedded:3.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
+    compile 'com.squareup:android-times-square:1.6.5@aar'
     testCompile 'junit:junit:4.12'
 }
